<resources>
    <string name="app_name">SyosetuViewer</string>
    <string name="title_novel_list">Novels</string>
    <string name="title_search">Search</string>
    <string name="novel_not_exists">Click the \"+\" button below to add novel.</string>
    <string name="add_novel">Add a novel</string>
    <string name="enter_ncode">Enter a ncode</string>
    <string name="enter_ncode_description">https://ncode.syosetu.com/&lt;ncode&gt;</string>
    <string name="next">Next</string>
    <string name="text_size">Text size</string>
    <string name="paragraph_spacing">Paragraph</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="description_include_word">Words to include</string>
    <string name="title_search_results">Search results</string>
    <string name="description_exclude_word">Words to exclude</string>
    <string name="description_order_by">Order by:</string>
    <string name="description_genre">Genre</string>
    <string name="description_genre_love_affair">Love affair</string>
    <string name="description_genre_different_world">Different world</string>
    <string name="description_genre_real_world">Real world</string>
    <string name="description_genre_fantasy">Fantasy</string>
    <string name="description_genre_high_fantasy">High fantasy</string>
    <string name="description_genre_low_fantasy">Low fantasy</string>
    <string name="description_genre_literature">Literature</string>
    <string name="description_genre_pure_literature">Pure literature</string>
    <string name="description_genre_human_drama">Human drama</string>
    <string name="description_genre_history">History</string>
    <string name="description_genre_detective">Detective</string>
    <string name="description_genre_horror">Horror</string>
    <string name="description_genre_action">Action</string>
    <string name="description_genre_comedy">Comedy</string>
    <string name="description_genre_sf">SF</string>
    <string name="description_genre_vr_game">VR game</string>
    <string name="description_genre_the_universe">The universe</string>
    <string name="description_genre_sci_fi">Sci-fi</string>
    <string name="description_genre_panic">Panic</string>
    <string name="description_genre_other">Other</string>
    <string name="description_genre_fairy_tale">Fairy tale</string>
    <string name="description_genre_poetry">Poetry</string>
    <string name="description_genre_essay">Essay</string>
    <string name="description_genre_replay">Replay</string>
    <string name="description_genre_non_genre">Non-genre</string>
    <string name="load_image">Load image</string>
    <string name="description_image">image</string>
    <string name="description_advanced">Advanced</string>
    <string name="description_minimum">Min.</string>
    <string name="description_maximum">Max.</string>
    <string name="tilde">~</string>
    <string name="date_example">yyyy/MM/dd</string>
    <string name="description_advanced_type">Type</string>
    <string name="description_advanced_type_short">Short</string>
    <string name="description_advanced_type_in_serialization">In serialization</string>
    <string name="description_advanced_type_finished">Finished</string>
    <string name="description_advanced_reading_time">Reading time</string>
    <string name="description_advanced_characters">Characters</string>
    <string name="description_advanced_overall_points">Overall points</string>
    <string name="description_advanced_last_refresh">Last refresh</string>
    <string name="description_advanced_first_upload">First upload</string>
    <string name="description_last_episode">This is the last episode.</string>
    <string name="description_apply">Apply</string>
    <string name="title_settings">Settings</string>
    <string name="description_word_wrap">Enable word wrap</string>
    <string name="description_continue_watch">Continue watching</string>
    <string name="description_watch_first">Watch the first episode</string>
    <string name="description_watch_next">Watch the next episode</string>
    <string name="description_go_to_the_top">Go to the top</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_over_18">I\'m over 18</string>

    <string-array name="order_by_array">
        <item>Recent refresh</item>
        <item>Weekly Unique Access</item>
        <item>Bookmarks</item>
        <item>Reviewed</item>
        <item>Overall points</item>
        <item>Daily points</item>
        <item>Weekly points</item>
        <item>Monthly points</item>
        <item>Quarter points</item>
        <item>Yearly points</item>
        <item>Evaluators</item>
        <item>Characters</item>
        <item>Recent episode</item>
        <item>Oldest to latest</item>
    </string-array>

    <string-array name="theme_list">
        <item>Use system default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>