<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable name="min" type="String" />
        <variable name="max" type="String" />
    </data>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={min}"
            android:hint="@string/description_minimum"
            android:inputType="number"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tilde" />

        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={max}"
            android:hint="@string/description_maximum"
            android:inputType="number"
            android:importantForAutofill="no" />
    </LinearLayout>
</layout>