<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/navigation_novel_list">

	<fragment
		android:id="@+id/navigation_novel_list"
		android:name="me.nutyworks.syosetuviewerv2.ui.main.fragment.novel.list.NovelListFragment"
		android:label="@string/title_novel_list"
		tools:layout="@layout/fragment_novel_list" >
		<action
			android:id="@+id/action_fragment_novel_list_to_fragment_novel_detail"
			app:popUpToInclusive="true"
			app:destination="@id/navigation_novel_detail" />
	</fragment>

	<fragment
		android:id="@+id/navigation_novel_detail"
		android:name="me.nutyworks.syosetuviewerv2.ui.main.fragment.novel.detail.NovelDetailFragment"
		android:label="Novel Details"
		tools:layout="@layout/fragment_novel_detail" />

	<fragment
		android:id="@+id/navigation_search"
		android:name="me.nutyworks.syosetuviewerv2.ui.main.fragment.search.SearchFragment"
		android:label="@string/title_search"
		tools:layout="@layout/fragment_search" />

	<fragment
		android:id="@+id/navigation_settings"
		android:name="me.nutyworks.syosetuviewerv2.ui.main.fragment.settings.SettingsFragment"
		android:label="@string/title_settings"
		tools:layout="@layout/fragment_settings" />
</navigation>