<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="me.nutyworks.syosetuviewerv2.ui.main.fragment.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.fragment.settings.SettingsFragment">

        <TableLayout
            android:id="@+id/ll_settings_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow>

                <TextView
                    android:text="@string/settings_theme" />

                <!--suppress AndroidUnknownAttribute -->
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/theme_list"
                    android:selectedItemPosition="@={viewModel.theme}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </TableRow>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:text="@string/settings_over_18"
                android:checked="@={viewModel.isOverR18}" />

        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(v) -> viewModel.applySettings()}"
            android:text="@string/description_apply"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
