<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="me.nutyworks.syosetuviewerv2.ui.main.fragment.search.SearchViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="16dp"
                tools:context=".ui.main.fragment.search.SearchFragment">

                <EditText
                    android:id="@+id/et_include_words"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:autofillHints="no"
                    android:hint="@string/description_include_word"
                    android:inputType="text"
                    android:text="@={viewModel.includeWords}"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_exclude_words"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:autofillHints="no"
                    android:hint="@string/description_exclude_word"
                    android:inputType="text"
                    android:text="@={viewModel.excludeWords}"
                    app:layout_constraintTop_toBottomOf="@id/et_include_words" />

                <include
                    android:id="@+id/expandable_genre"
                    layout="@layout/layout_expandable_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/et_exclude_words"
                    bind:viewModel="@{viewModel}" />

                <include
                    android:id="@+id/expandable_advanced"
                    layout="@layout/layout_expandable_advanced"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/expandable_genre"
                    bind:viewModel="@{viewModel}" />

                <TextView
                    android:id="@+id/tv_order_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/description_order_by"
                    app:layout_constraintBottom_toBottomOf="@id/spinner_order_by"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/spinner_order_by" />

                <!--suppress AndroidUnknownAttribute -->
                <!-- specified binding exists and known -->
                <Spinner
                    android:id="@+id/spinner_order_by"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:selectedItemPosition="@={viewModel.orderBy}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_order_by"
                    app:layout_constraintTop_toBottomOf="@id/expandable_advanced" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:onClick="@{() -> viewModel.search()}"
                    android:text="@string/title_search"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/spinner_order_by" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
